--- a/jsk_recognition_msgs/CMakeLists.txt
+++ b/jsk_recognition_msgs/CMakeLists.txt
@@ -35,6 +35,8 @@ add_message_files(
   PosedCameraInfo.msg
   RectArray.msg
   Rect.msg
+  RectWithValue.msg
+  RectWithValueArray.msg
   RotatedRect.msg
   RotatedRectStamped.msg
   SimpleHandle.msg
