--- a/checkerboard_detector/CMakeLists.txt
+++ b/checkerboard_detector/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(catkin REQUIRED COMPONENTS roscpp rosconsole dynamic_reconfigure cv
 )
 find_package(OpenMP)
 find_package(posedetection_msgs)
+find_package(OpenCV)
 
 generate_dynamic_reconfigure_options(cfg/CheckerboardDetector.cfg)
 
@@ -22,7 +23,7 @@ if (OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
-include_directories(SYSTEM ${catkin_INCLUDE_DIRS})
+include_directories(SYSTEM ${OpenCV_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} )
 
 #set the default path for built executables to the "bin" directory
 # set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
@@ -30,11 +31,11 @@ include_directories(SYSTEM ${catkin_INCLUDE_DIRS})
 # set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 add_executable(checkerboard_detector src/checkerboard_detector.cpp)
-target_link_libraries(checkerboard_detector ${catkin_LIBRARIES})
+target_link_libraries(checkerboard_detector ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} )
 add_executable(objectdetection_transform_echo src/objectdetection_transform_echo.cpp)
-target_link_libraries(objectdetection_transform_echo ${catkin_LIBRARIES})
+target_link_libraries(objectdetection_transform_echo ${OpenCV_LIBRARIES} ${catkin_LIBRARIES}  )
 add_executable(checkerboard_calibration src/checkerboard_calibration.cpp)
-target_link_libraries(checkerboard_calibration ${catkin_LIBRARIES})
+target_link_libraries(checkerboard_calibration ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} )
 add_dependencies(checkerboard_detector    posedetection_msgs_gencpp)
 add_dependencies(checkerboard_calibration posedetection_msgs_gencpp)
 add_dependencies(objectdetection_transform_echo posedetection_msgs_gencpp)
